--- a/style.css
+++ b/style.css
@@ -253,3 +253,52 @@ h1{       /*Hakkımızda sayfasının h1 i*/
     color: #494949;
 
 }
+
+
+.referans{
+    width: 31%; /*3 resmi yan yana sığdırmak için aralardaki boşlığu da hesaba kattık.*/
+    height: 300px;
+    background-color: white;
+    float: left;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 8px 2px rgba(20, 23, 28, .15);
+
+}
+
+.refResim{
+    width: 100%; /*içinde bulunduğu etikete sığdırdık.*/
+    height: 200px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    margin: 0;
+    opacity: 0.6; /*resim ilk etapta soluk olacak.*/
+    transition: opacity 0.8s;
+}
+
+.refResim:hover{
+    opacity: 1;
+    
+}
+
+.refBaslik{
+    font-size: 20px;
+    display: block; 
+    margin: 0px;
+    color: black;
+    text-align: center;
+    height: 45px;
+    line-height: 45px;
+    background-color: #f1f1f1;
+    margin-top: -5px;
+}
+
+
+
+.refDetay{
+    text-align: center;
+    font-size: 500;
+    font-style: italic;
+
+}
+
