--- a/style.css
+++ b/style.css
@@ -302,3 +302,25 @@ h1{       /*Hakkımızda sayfasının h1 i*/
 
 }
 
+.galResim{
+    width: 22%;
+    height: 200px;
+    border-radius: 5px;
+    opacity: 0.8;
+    box-shadow: 0 2px 8px 2px rgba(20, 23, 28, .15);
+    margin: 10px;
+    transition: all 0.4s;
+    object-fit: cover; /*resimlerdeki sıkışmayı düzelttik.*/
+}
+
+.galResim:hover{
+    opacity: 1;
+    border: 5px solid white;
+    cursor :pointer; /*üzerine gelince çıkan el şeklinde fare imleci*/
+
+
+}
+
+.link:link{  /*link classı link halindeyken aralarda çıkan siyah lekeleri giderdik*/
+    text-decoration: none;
+}
