--- a/style.css
+++ b/style.css
@@ -324,3 +324,90 @@ h1{       /*Hakkımızda sayfasının h1 i*/
 .link:link{  /*link classı link halindeyken aralarda çıkan siyah lekeleri giderdik*/
     text-decoration: none;
 }
+
+iframe{
+    width: 98%;
+    height: 350px;
+    border-radius: 10px;
+    margin-top: 10px;
+    box-shadow: 0 2px 8px 2px rgba(20, 23, 28, .15);
+    margin-left: 10px;
+}
+
+.section{
+    width: 98%;
+    height: auto;
+    margin: auto;
+    margin-top: 10px;
+    background-color: #f2f2f2;
+    padding: 10px;
+}
+
+.form{
+    width: 49%;
+    float: left;
+    height: 380px;
+    border: 1px solid #d8d8d8;
+    padding: 10px;
+    margin-right: 10px;
+}
+
+.col25{
+    width: 25%;
+    float: left;
+    margin-top: 6px;
+}
+
+.col75{
+    width: 75%;
+    float: left;
+    margin-top: 6px;
+}
+
+label{
+    padding: 12px 12px 12px 0; /*üst sağ alt sol*/
+    display: inline-block;
+}
+
+input[type=text], textarea{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+
+}
+.row:after{
+    content: "";
+    clear: both;
+    display: block;
+}
+
+input[type=submit]{
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px; /*yukarı-aşağı sol-sağ*/
+    border: none;
+    border-radius: 4px;
+    float: right;
+}
+
+.adres{
+    width: 49%;
+    float: left;
+    height: 380px;
+    border: 1px solid #d8d8d8;
+    padding: 10px;
+}
+
+h2{
+    text-align: center;
+}
+
+.span1{
+    display: block; /*herbiri ayrı satırda genişliği ve yüksekliği var*/
+    font-family: calibri;
+    margin: 10px;
+    letter-spacing: 1.5px; /*harflerin arasını açar*/
+    text-align: center;
+    font-size: 16px;
+}
